add the fact that we can now use the ip address instead of localhost to use the api
